src/test/ui/unused/unused-closure.stderr
error: unused closure that must be used
  --> $DIR/unused-closure.rs:10:5
   |
LL | /     || {
LL | |         println!("Hello!");
LL | |     };
   | |______^
   |
note: the lint level is defined here
  --> $DIR/unused-closure.rs:7:9
   |
LL | #![deny(unused_must_use)]
   |         ^^^^^^^^^^^^^^^
   = note: closures are lazy and do nothing unless called

error: unused implementer of `std::future::Future` that must be used
  --> $DIR/unused-closure.rs:14:5
   |
LL |     async {};
   |     ^^^^^^^^^
   |
   = note: futures do nothing unless you `.await` or poll them

error: unused closure that must be used
  --> $DIR/unused-closure.rs:15:5
   |
LL |     || async {};
   |     ^^^^^^^^^^^^
   |
   = note: closures are lazy and do nothing unless called

error: unused closure that must be used
  --> $DIR/unused-closure.rs:16:5
   |
LL |     async || {};
   |     ^^^^^^^^^^^^
   |
   = note: closures are lazy and do nothing unless called

error: unused array of boxed arrays of closures that must be used
  --> $DIR/unused-closure.rs:19:5
   |
LL |     [Box::new([|| {}; 10]); 1];
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: closures are lazy and do nothing unless called

error: unused array of generators that must be used
  --> $DIR/unused-closure.rs:21:5
   |
LL | /     [|| {
LL | |         yield 42u32;
LL | |     }; 42];
   | |___________^
   |
   = note: generators are lazy and do nothing unless resumed

error: unused closure that must be used
  --> $DIR/unused-closure.rs:25:5
   |
LL |     vec![|| "a"].pop().unwrap();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: closures are lazy and do nothing unless called

error: unused closure that must be used
  --> $DIR/unused-closure.rs:28:9
   |
LL |         || true;
   |         ^^^^^^^^
   |
   = note: closures are lazy and do nothing unless called

error: aborting due to 8 previous errors

